crates/solidity-v2/testing/snapshots/diagnostics_output/semantic/constant_cycles/array_size/cyclic/generated/slang/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 3

Error: Cyclic constant definition (or maximum recursion depth exhausted).
   ╭─[input.sol:7:5]
   │
 7 │     uint256[A] data;
   │     ─────┬────  
   │          ╰────── Error occurred here.
───╯

Error: The value of the constant A has a cyclic dependency via B.
   ╭─[input.sol:5:5]
   │
 5 │     uint256 constant A = B;
   │     ───────────┬───────────  
   │                ╰───────────── Error occurred here.
───╯

Error: The value of the constant B has a cyclic dependency via A.
   ╭─[input.sol:6:5]
   │
 6 │     uint256 constant B = A;
   │     ───────────┬───────────  
   │                ╰───────────── Error occurred here.
───╯
